--- a/pytorch/requirements.txt
+++ b/pytorch/requirements.txt
@@ -1,4 +1,5 @@
-numpy==1.17.2
-six==1.12.0
-torch==1.3.0
-torchvision==0.4.1
+numpy==1.18.2
+Pillow==7.1.1
+six==1.14.0
+torch==1.4.0
+torchvision==0.5.0
