--- a/datamining/requirements.txt
+++ b/datamining/requirements.txt
@@ -1,30 +1,54 @@
-appnope==0.1.0
 backcall==0.1.0
+bleach==3.1.4
+certifi==2020.4.5.1
+cffi==1.14.0
+chardet==3.0.4
+cryptography==2.9
 cycler==0.10.0
-decorator==4.4.0
-imageio==2.6.1
-ipython==7.8.0
+decorator==4.4.2
+docutils==0.16
+idna==2.9
+imageio==2.8.0
+ipython==7.13.0
 ipython-genutils==0.2.0
-jedi==0.15.1
-joblib==0.14.0
-kiwisolver==1.1.0
-matplotlib==3.1.1
+jedi==0.16.0
+jeepney==0.4.3
+joblib==0.14.1
+keyring==21.2.0
+kiwisolver==1.2.0
+matplot==0.1.9
+matplotlib==3.2.1
 mglearn==0.1.7
-numpy==1.17.2
-pandas==0.25.1
-parso==0.5.1
-pexpect==4.7.0
+numpy==1.18.2
+pandas==1.0.3
+parso==0.6.2
+pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==6.2.2
-prompt-toolkit==2.0.10
+Pillow==7.1.1
+pkginfo==1.5.0.1
+prompt-toolkit==3.0.5
 ptyprocess==0.6.0
-Pygments==2.4.2
-pyparsing==2.4.2
-python-dateutil==2.8.0
+pycparser==2.20
+Pygments==2.6.1
+pyloco==0.0.139
+pyparsing==2.4.7
+python-dateutil==2.8.1
 pytz==2019.3
-scikit-learn==0.21.3
-scipy==1.3.1
-six==1.12.0
+readme-renderer==25.0
+requests==2.23.0
+requests-toolbelt==0.9.1
+scikit-learn==0.22.2.post1
+scipy==1.4.1
+SecretStorage==3.1.2
+SimpleWebSocketServer==0.1.1
+six==1.14.0
 sklearn==0.0
+tqdm==4.45.0
 traitlets==4.3.3
-wcwidth==0.1.7
+twine==3.1.1
+typing==3.7.4.1
+urllib3==1.25.8
+ushlex==0.99.1
+wcwidth==0.1.9
+webencodings==0.5.1
+websocket-client==0.57.0
