--- a/datamining/requirements.txt
+++ b/datamining/requirements.txt
@@ -19,6 +19,9 @@ kiwisolver==1.2.0
 matplot==0.1.9
 matplotlib==3.2.1
 mglearn==0.1.7
+mypy==0.770
+mypy-extensions==0.4.3
+nltk==3.4.5
 numpy==1.18.2
 pandas==1.0.3
 parso==0.6.2
@@ -46,7 +49,9 @@ sklearn==0.0
 tqdm==4.45.0
 traitlets==4.3.3
 twine==3.1.1
+typed-ast==1.4.1
 typing==3.7.4.1
+typing-extensions==3.7.4.2
 urllib3==1.25.8
 ushlex==0.99.1
 wcwidth==0.1.9
