--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+mypy==0.770
+mypy-extensions==0.4.3
 ordered-set==3.1.1
 python-dateutil==2.8.1
 pytz==2019.3
 six==1.14.0
+typed-ast==1.4.1
+typing-extensions==3.7.4.2
