--- a/tf/requirements.txt
+++ b/tf/requirements.txt
@@ -1,4 +1,46 @@
+absl-py==0.9.0
+astunparse==1.6.3
+attrs==19.3.0
+cachetools==4.0.0
+certifi==2020.4.5.1
+chardet==3.0.4
+dill==0.3.2
+future==0.18.2
+gast==0.3.3
+google-auth==1.13.1
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+googleapis-common-protos==1.52.0
+grpcio==1.28.1
+h5py==2.10.0
+idna==2.9
+Keras-Preprocessing==1.1.2
+Markdown==3.2.1
 mypy==0.770
 mypy-extensions==0.4.3
+numpy==1.18.2
+oauthlib==3.1.0
+opt-einsum==3.2.0
+promise==2.3
+protobuf==3.11.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyflakes==2.2.0
+requests==2.23.0
+requests-oauthlib==1.3.0
+rsa==4.0
+scipy==1.4.1
+six==1.14.0
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.6.0.post3
+tensorflow==2.3.0
+tensorflow-datasets==3.2.1
+tensorflow-estimator==2.3.0
+tensorflow-metadata==0.22.2
+termcolor==1.1.0
+tqdm==4.48.0
 typed-ast==1.4.1
 typing-extensions==3.7.4.2
+urllib3==1.25.8
+Werkzeug==1.0.1
+wrapt==1.12.1
