--- a/tf/environment.yml
+++ b/tf/environment.yml
@@ -2,84 +2,59 @@ name: tf
 channels:
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
   - _tflow_select=2.3.0=mkl
-  - absl-py=0.10.0=py38_0
-  - aiohttp=3.6.3=py38h7b6447c_0
-  - astunparse=1.6.3=py_0
-  - async-timeout=3.0.1=py38_0
-  - attrs=20.2.0=py_0
+  - absl-py=0.10.0=py37_0
+  - astor=0.8.1=py37_0
   - blas=1.0=mkl
-  - blinker=1.4=py38_0
-  - brotlipy=0.7.0=py38h7b6447c_1000
-  - c-ares=1.16.1=h7b6447c_0
-  - ca-certificates=2020.7.22=0
-  - cachetools=4.1.1=py_0
-  - certifi=2020.6.20=py38_0
-  - cffi=1.14.3=py38he30daa8_0
-  - chardet=3.0.4=py38_1003
-  - click=7.1.2=py_0
-  - cryptography=3.1.1=py38h1ba5d50_0
-  - gast=0.3.3=py_0
-  - google-auth=1.22.1=py_0
-  - google-auth-oauthlib=0.4.1=py_2
+  - c-ares=1.16.1=haf1e3a3_0
+  - ca-certificates=2021.1.19=hecd8cb5_0
+  - certifi=2020.12.5=py37hecd8cb5_0
+  - gast=0.2.2=py37_0
   - google-pasta=0.2.0=py_0
-  - grpcio=1.31.0=py38hf8bcb03_0
-  - h5py=2.10.0=py38hd6299e0_1
-  - hdf5=1.10.6=hb1b8bf9_0
-  - idna=2.10=py_0
+  - grpcio=1.31.0=py37h7580e61_0
+  - h5py=2.10.0=py37h0601b69_1
+  - hdf5=1.10.6=hdbbcd12_0
   - importlib-metadata=2.0.0=py_1
-  - intel-openmp=2020.2=254
+  - intel-openmp=2019.4=233
+  - keras=2.3.1=0
+  - keras-applications=1.0.8=py_1
+  - keras-base=2.3.1=py37_0
   - keras-preprocessing=1.1.0=py_1
-  - ld_impl_linux-64=2.33.1=h53a641e_7
-  - libedit=3.1.20191231=h14c3975_1
-  - libffi=3.3=he6710b0_2
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libprotobuf=3.13.0.1=hd408876_0
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - markdown=3.3=py38_0
-  - mkl=2020.2=256
-  - mkl-service=2.3.0=py38he904b0f_0
-  - mkl_fft=1.2.0=py38h23d657b_0
-  - mkl_random=1.1.1=py38h0573a6f_0
-  - multidict=4.7.6=py38h7b6447c_1
-  - ncurses=6.2=he6710b0_1
-  - numpy=1.19.1=py38hbc911f0_0
-  - numpy-base=1.19.1=py38hfa32c7d_0
-  - oauthlib=3.1.0=py_0
-  - openssl=1.1.1h=h7b6447c_0
+  - libcxx=10.0.0=1
+  - libedit=3.1.20191231=h1de35cc_1
+  - libffi=3.3=hb1e8313_2
+  - libgfortran=3.0.1=h93005f0_2
+  - libprotobuf=3.13.0.1=hab81aa3_0
+  - markdown=3.3=py37_0
+  - mkl=2019.4=233
+  - mkl-service=2.3.0=py37hfbe908c_0
+  - mkl_fft=1.2.0=py37hc64f4ea_0
+  - mkl_random=1.1.1=py37h959d312_0
+  - ncurses=6.2=h0a44026_1
+  - numpy=1.19.1=py37h3b9f5b6_0
+  - numpy-base=1.19.1=py37hcfb5961_0
+  - openssl=1.1.1i=h9ed2024_0
   - opt_einsum=3.1.0=py_0
-  - pip=20.2.3=py38_0
-  - protobuf=3.13.0=py38he6710b0_1
-  - pyasn1=0.4.8=py_0
-  - pyasn1-modules=0.2.8=py_0
-  - pycparser=2.20=py_2
-  - pyjwt=1.7.1=py38_0
-  - pyopenssl=19.1.0=py_1
-  - pysocks=1.7.1=py38_0
-  - python=3.8.5=h7579374_1
-  - readline=8.0=h7b6447c_0
-  - requests=2.24.0=py_0
-  - requests-oauthlib=1.3.0=py_0
-  - rsa=4.6=py_0
-  - scipy=1.5.2=py38h0b6359f_0
-  - setuptools=50.3.0=py38hb0f4dca_1
+  - pip=20.2.3=py37_0
+  - protobuf=3.13.0=py37hb1e8313_1
+  - python=3.7.7=hf48f09d_4
+  - pyyaml=5.4.1=py37h9ed2024_1
+  - readline=8.0=h1de35cc_0
+  - scipy=1.5.2=py37h912ce22_0
+  - setuptools=50.3.0=py37h0dc7051_1
   - six=1.15.0=py_0
-  - sqlite=3.33.0=h62c20be_0
-  - tensorboard=2.2.1=pyh532a8cf_0
-  - tensorboard-plugin-wit=1.6.0=py_0
-  - tensorflow=2.2.0=mkl_py38h6d3daf0_0
-  - tensorflow-base=2.2.0=mkl_py38h5059a2d_0
-  - tensorflow-estimator=2.2.0=pyh208ff02_0
-  - termcolor=1.1.0=py38_1
-  - tk=8.6.10=hbc83047_0
-  - urllib3=1.25.10=py_0
+  - sqlite=3.33.0=hffcf06c_0
+  - tensorboard=2.0.0=pyhb38c66f_1
+  - tensorflow=2.0.0=mkl_py37hda344b4_0
+  - tensorflow-base=2.0.0=mkl_py37h66b1bf0_0
+  - tensorflow-estimator=2.0.0=pyh2649769_0
+  - termcolor=1.1.0=py37_1
+  - tk=8.6.10=hb0a8c7a_0
   - werkzeug=1.0.1=py_0
   - wheel=0.35.1=py_0
-  - wrapt=1.12.1=py38h7b6447c_1
-  - xz=5.2.5=h7b6447c_0
-  - yarl=1.6.0=py38h7b6447c_0
+  - wrapt=1.12.1=py37h1de35cc_1
+  - xz=5.2.5=h1de35cc_0
+  - yaml=0.2.5=haf1e3a3_0
   - zipp=3.3.0=py_0
-  - zlib=1.2.11=h7b6447c_3
-prefix: /home/terzeron/anaconda3/envs/tf
+  - zlib=1.2.11=h1de35cc_3
+prefix: /Users/terzeron/anaconda3/envs/tf
