--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ dill==0.3.5.1
 etils==0.6.0
 fonttools==4.34.4
 frozenlist==1.3.0
+gensim==4.2.0
 googleapis-common-protos==1.56.3
 idna==3.3
 imageio==2.19.3
@@ -60,6 +61,7 @@ soupsieve==2.3.2.post1
 spacy==3.4.0
 spacy-legacy==3.0.9
 spacy-loggers==1.0.2
+SQLAlchemy==1.4.40
 srsly==2.4.3
 tensorflow-datasets==4.6.0
 tensorflow-metadata==1.9.0
