--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ protobuf==3.20.2
 pydantic==1.9.1
 pyflakes==2.5.0
 pyparsing==3.0.9
+pyth==0.6.0
 python-dateutil==2.8.2
 pytz==2022.1
 regex==2022.7.9
