--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 aiohttp==3.8.4
 aiosignal==1.3.1
+aiosqlite==0.19.0
 async-timeout==4.0.2
 asyncio==3.4.3
 attrs==22.2.0
 charset-normalizer==3.1.0
 frozenlist==1.3.3
+greenlet==2.0.2
 idna==3.4
 multidict==6.0.4
 Rx==3.2.0
