--- a/requirements.txt
+++ b/requirements.txt
@@ -18,9 +18,11 @@ fonttools==4.34.4
 frozenlist==1.3.0
 gensim==4.2.0
 googleapis-common-protos==1.56.3
+greenlet==1.1.3.post0
 idna==3.3
 imageio==2.19.3
 importlib-resources==5.8.0
+inotify==0.2.10
 Jinja2==3.1.2
 joblib==1.2.0
 JPype1==1.4.0
@@ -35,6 +37,7 @@ mglearn==0.1.9
 multidict==6.0.2
 murmurhash==1.0.7
 nltk==3.7
+nose==1.3.7
 numpy==1.23.1
 packaging==21.3
 pandas==1.4.3
